[package]
name = "serde_starlark"
version = "0.1.15"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding"]
description = "Serde serializer for generating Starlark build targets"
documentation = "https://docs.rs/serde_starlark"
edition = "2021"
keywords = ["serde", "bazel", "buck", "starlark", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/serde-starlark"
rust-version = "1.56"

[dependencies]
serde = "1.0.166"

[dev-dependencies]
expect-test = "1.4"
itertools = "0.12"
semver = { version = "1.0.17", features = ["serde"] }
serde_derive = "1.0.166"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
